--- a/public/css/Layout.css
+++ b/public/css/Layout.css
@@ -59,3 +59,30 @@ main{
 
 
 }
+
+#logo-link {
+  text-decoration: none;
+  color:black;
+}
+
+#logo-link:hover {
+  color:black;
+}
+
+.regologo-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px 0;
+}
+
+#reg-form {
+  min-width: 400px; 
+  margin: 20px 0;
+}
+
+#reg-form .btn {
+  margin: 0;
+  margin-top: 20px;
+}
+
