--- a/public/css/Layout.css
+++ b/public/css/Layout.css
@@ -76,12 +76,12 @@ main{
   margin: 50px 0;
 }
 
-#reg-form {
+#reg-form, #log-form {
   min-width: 400px; 
   margin: 20px 0;
 }
 
-#reg-form .btn {
+#reg-form .btn, #log-form .btn{
   margin: 0;
   margin-top: 20px;
 }
