--- a/public/css/Layout.css
+++ b/public/css/Layout.css
@@ -185,3 +185,22 @@ margin: 50px 10%;
 .edit-card {
   margin-bottom: 20px;
 }
+
+.new-card-link {
+  display: block;
+  text-align: center;
+}
+
+.new-card-link .btn {
+  background-color: green;
+  border: none;
+}
+
+.new-card-link .btn:hover {
+  background-color:aquamarine;
+  color: black
+}
+
+.btn-card {
+  margin: 30px 0 0 0;
+}
